# quiz-record

./: .env.example  .gitignore  API接口设计文档.md  LICENSE  README.md  docker-compose.yml  数据库设计文档.md  需求文档.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260422_0001_init_schema.py  20260424_0002_scope_llm_configs_by_module.py  20260425_0003_remove_question_logical_delete.py  20260425_0004_remove_sub_subject_prefixes.py
backend/app/: __init__.py  main.py
backend/app/api/: main.py
backend/app/api/v1/: health.py  llm_configs.py  question_search.py  questions.py
backend/app/core/: config.py  exceptions.py  response.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  llm_config.py  question.py
backend/app/schemas/: __init__.py  common.py  llm_config.py  question.py
backend/app/services/: __init__.py  image_storage.py  llm_client.py  llm_config_service.py  ocr.py  question_service.py
backend/tests/: conftest.py  test_health.py  test_llm_configs_api.py  test_questions_api.py
docs/: index.html
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/llm-configs/: page.tsx
frontend/app/questions/[id]/edit/: page.tsx
frontend/app/questions/new/: page.tsx
frontend/components/: app-shell.tsx  llm-configs-manager.tsx  question-form.tsx  questions-dashboard.tsx
frontend/lib/: api.ts  types.ts
